objects/ServiceAppointment.object
<CustomObject>
    <fields>
        <fullName>Invoice_Created__c</fullName>
        <formula>Work_Order__r.WOService_Invoice_Created__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Invoice Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Technician_Email_address__c</fullName>
        <label>Technician Email address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>Service Appointments</relationshipLabel>
        <relationshipName>Service_Appointments</relationshipName>
        <type>Lookup</type>
    </fields>
    <listViews>
        <fullName>All_ServiceAppointments</fullName>
        <filterScope>Everything</filterScope>
        <label>All Service Appointments</label>
    </listViews>
    <listViews>
        <fullName>My_ServiceAppointments</fullName>
        <filterScope>Mine</filterScope>
        <label>My Service Appointments</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>FSL__Related_Service_with_time_dependency</fullName>
        <active>true</active>
        <description>If related service is not empty then time dependency is not empty</description>
        <errorConditionFormula>( !ISBLANK(FSL__Related_Service__c) &amp;&amp; ( ISBLANK(TEXT(FSL__Time_Dependency__c)) &amp;&amp; !FSL__Same_Day__c &amp;&amp; !FSL__Same_Resource__c ) )</errorConditionFormula>
        <errorMessage>Please select Time Dependency or Same Day or Same Reosurce .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Same_Resource_Same_Start</fullName>
        <active>true</active>
        <description>Can&apos;t be same start and same reosurce</description>
        <errorConditionFormula>TEXT(FSL__Time_Dependency__c) = &quot;Same Start&quot; &amp;&amp; FSL__Same_Resource__c</errorConditionFormula>
        <errorMessage>Resource dependency is invalid. Time Dependency can&apos;t be Same Start when same resource is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Schedule_End_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(SchedEndTime) &amp;&amp; NOT(ISNULL(SchedStartTime))</errorConditionFormula>
        <errorDisplayField>SchedEndTime</errorDisplayField>
        <errorMessage>Both scheduled start and end are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Schedule_Start_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNULL(SchedStartTime) &amp;&amp; NOT(ISNULL(SchedEndTime))</errorConditionFormula>
        <errorDisplayField>SchedStartTime</errorDisplayField>
        <errorMessage>Both scheduled start and end are required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Service_Color_HEX_Format</fullName>
        <active>true</active>
        <errorConditionFormula>(!ISBLANK(FSL__GanttColor__c)) &amp;&amp; (NOT(REGEX(FSL__GanttColor__c, &quot;#[a-fA-F0-9]{6}&quot;)))</errorConditionFormula>
        <errorDisplayField>FSL__GanttColor__c</errorDisplayField>
        <errorMessage>Gantt color must be in hexadecimal format: (for example: #ffffff)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Time_dependency_with_related_service</fullName>
        <active>true</active>
        <errorConditionFormula>( ISBLANK(FSL__Related_Service__c) &amp;&amp; ( !ISBLANK(TEXT(FSL__Time_Dependency__c)) ||  FSL__Same_Day__c || FSL__Same_Resource__c ) )</errorConditionFormula>
        <errorDisplayField>FSL__Related_Service__c</errorDisplayField>
        <errorMessage>Please select Related Service.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__isDurationExist</fullName>
        <active>true</active>
        <description>Check if Duration field exist on service appointment.</description>
        <errorConditionFormula>ISNULL(Duration)</errorConditionFormula>
        <errorDisplayField>Duration</errorDisplayField>
        <errorMessage>Duration field is required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Invoice_is_created_on_master_Work_order</fullName>
        <active>true</active>
        <errorConditionFormula>$Setup.ActivateTriggers__c.Enabled__c!=false &amp;&amp;
Invoice_Created__c = true
&amp;&amp; NOT((PRIORVALUE( Invoice_Created__c ))=false)</errorConditionFormula>
        <errorMessage>The Service Appointment cannot be updated as the Invoice has been created for the Master Work order</errorMessage>
    </validationRules>
</CustomObject>